[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-causal-selector"
version = "0.1.0"
description = "Multi-agent LangGraph pipeline for ML model + hyperparameter recommendation via RAG and causal inference"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Agentic RAG Team" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "dowhy>=0.8.0",
    "econml>=0.14.0",
    "optuna>=4.0.0",
    "mlflow>=2.18.0",
    "huggingface-hub>=0.26.0",
    "networkx>=3.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
